# typercise

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  styles.css
docs/: index.html  privacy.html  style.css  world.html
scripts/: release.sh
server/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
server/migrations/: 0001_init.sql
server/src/: index.ts
src/: app.rs
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: buffer.rs  commands.rs  keystroke.rs  lib.rs  main.rs  perms.rs  settings.rs  stats.rs  store.rs  telemetry.rs
